--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.9",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^1.19.4"
   }
 }
