--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "jquery": "^3.4.1",
+    "jquery-validation": "^1.19.1",
     "mongoose": "^5.7.9",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.4"
