--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jquery-validation": "^1.19.1",
     "mongoose": "^5.7.9",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
